<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="library_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="reload">Обновить</string>
    <string name="clear">Очистить историю</string>
    <string name="history">Вы искали</string>
    <string name="search_placeholder">Тут будет поиск</string>
    <string name="library_placeholder">Тут будет медиатека</string>
    <string name="practicum_link">practicum.yandex.ru/learn/android-developer</string>
    <string name="email">is320@mail.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="ethernet_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="to_long_query">Запрос слишком длинный</string>
    <string name="music_duration">Длительность</string>
    <string name="album_name">Альбом</string>
    <string name="music_year">Год</string>
    <string name="music_genre">Жанр</string>
    <string name="music_country">Страна</string>
</resources>