<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/MainTitleStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        app:icon="@drawable/search"
        android:text="@string/search_button"
        style="@style/MainButtonStyle"
/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/library_button"
        app:icon="@drawable/library"
        android:text="@string/library_button"
        style="@style/MainButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        app:icon="@drawable/settings"
        android:text="@string/settings_button"
        style="@style/MainButtonStyle"/>


</LinearLayout>