<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/settings_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            style="@style/BackButton"/>

        <TextView
            android:text="@string/settings_button"
            style="@style/BackButtonTitle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textSize="@dimen/settings_text"
            android:textColor="@color/settings_text"
            android:layout_gravity="center"
            android:letterSpacing="0"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/theme_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_button"
        android:text="@string/share_app"
        app:icon="@drawable/share"
        style="@style/SettingsButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/support_button"
        android:text="@string/support"
        app:icon="@drawable/support"
        style="@style/SettingsButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_agreement_button"
        android:text="@string/user_agreement"
        app:icon="@drawable/arrow_forward"
        style="@style/SettingsButtonStyle"/>

</LinearLayout>